# ns

./: .gitignore  README.md  docker-compose.yaml  graphql.config.ts  package-lock.json  package.json  podman-deployment.yml
client/: Dockerfile  codegen.ts  package-lock.json  package.json  react-router.config.ts  schema.gql  vite.config.ts
client/app/: root.tsx  routes.ts  types.ts
client/app/queries/: getEvents.gql  getUserGroups.gql  getUserGroupsFile.gql  getUsers.gql
client/app/routes/: home.tsx
client/app/utils/: gql.ts  rest.ts
client/app/welcome/: welcome.tsx
db/: flyway.conf
db/migrations/: V1__create-tables.sql
go-server/: .air.toml  Dockerfile  alertsRouterHandler.go  db.go  entrypoint.sh  go.mod  go.sum  main.go  notes.md  usersRouterHandler.go
postgraphile/: Dockerfile  graphile.config.js  graphile.config.mjs  package-lock.json  package.json
server/: Dockerfile  db.py  pyproject.toml  pyrightconfig.json  requirements.txt
server/app/: db.py  main.py
server/app/notification/: notification.py
server/code/: db.py  main.py
server/code/notification/: slack_notification.py
