[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Sam Bernheim <sambernheim@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
psycopg2 = "^2.9.10"
slack-sdk = "^3.34.0"
returns = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
